feat: 初步完成MQTT鉴权中心与统一异常处理流程功能开发